# SEOPageAnalyzer

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
page_analyzer/: __init__.py  app.py  db.py  tools.py
page_analyzer/templates/: app.py  base.html  error.html  index.html  url.html  urls.html
